crates/oxc_react_compiler/tests/snapshots/fbt__fbtparam-text-must-use-expression-container.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbtparam-text-must-use-expression-container.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Foo value={fbt._("{value}%", [fbt._param("value", "0")], { hk: "10F5Cc" })} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
