crates/oxc_react_compiler/tests/snapshots/fbt__fbtparam-with-jsx-fragment-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbtparam-with-jsx-fragment-value.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
import { identity } from "shared-runtime";
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] !== props.text) {
		const t1 = identity(props.text);
		let t2;
		if ($[2] !== t1) {
			t2 = <>{t1}</>;
			$[2] = t1;
			$[3] = t2;
		} else {
			t2 = $[3];
		}
		t0 = <Foo value={<fbt desc="Description of the parameter">
          <fbt:param name="value">{t2}</fbt:param>%
        </fbt>} />;
		$[0] = props.text;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
