crates/oxc_react_compiler/tests/snapshots/fbt__lambda-with-fbt.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/lambda-with-fbt.js
---
import { c as _c } from "react/compiler-runtime";
import { fbt } from "fbt";
function Component() {
	const $ = _c(1);
	const buttonLabel = _temp;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <View><Button text={buttonLabel()} /></View>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	if (!someCondition) {
		return <fbt desc="My label">{"Purchase as a gift"}</fbt>;
	} else {
		if (!iconOnly && showPrice && item?.current_gift_offer?.price?.formatted != null) {
			return <fbt desc="Gift button's label">
          {"Gift | "}
          <fbt:param name="price">
            {item?.current_gift_offer?.price?.formatted}
          </fbt:param>
        </fbt>;
		} else {
			if (!iconOnly && !showPrice) {
				return <fbt desc="Gift button's label">{"Gift"}</fbt>;
			}
		}
	}
}
