crates/oxc_react_compiler/tests/snapshots/fbt__repro-fbt-param-nested-fbt-jsx.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/repro-fbt-param-nested-fbt-jsx.js
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
import { Stringify, identity } from "shared-runtime";
/**
* MemoizeFbtAndMacroOperands needs to account for nested fbt calls.
* Expected fixture `fbt-param-call-arguments` to succeed but it failed with error:
*   /fbt-param-call-arguments.ts: Line 19 Column 11: fbt: unsupported babel node: Identifier
*   ---
*   t3
*   ---
*/
function Component(t0) {
	"use memo";
	const $ = _c(9);
	const { firstname, lastname } = t0;
	let t1;
	if ($[0] !== firstname || $[1] !== lastname) {
		let t2;
		if ($[3] !== firstname) {
			t2 = <Stringify key={0} name={firstname} />;
			$[3] = firstname;
			$[4] = t2;
		} else {
			t2 = $[4];
		}
		let t3;
		if ($[5] !== lastname) {
			t3 = <Stringify key={1} name={lastname} />;
			$[5] = lastname;
			$[6] = t3;
		} else {
			t3 = $[6];
		}
		t1 = fbt([
			"Name: ",
			fbt.param("firstname", t2),
			", ",
			fbt.param("lastname", identity(fbt("(inner)" + fbt.param("lastname", t3), "Inner fbt value")))
		], "Name");
		$[0] = firstname;
		$[1] = lastname;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	let t2;
	if ($[7] !== t1) {
		t2 = <div>{t1}</div>;
		$[7] = t1;
		$[8] = t2;
	} else {
		t2 = $[8];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		firstname: "first",
		lastname: "last"
	}],
	sequentialRenders: [{
		firstname: "first",
		lastname: "last"
	}]
};
